<resources>
    <string name="app_name">GoRide</string>
    <string name="AppTitle">GoRide</string>
    <string name="About">RideGo is a carpooling app for older people to help them travel through Algeria with cheap prices.</string>
    <string name="TermsConditions">By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to Lamine.

        Lamine is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.

        The GoRide app stores and processes personal data that you have provided to us, in order to provide my Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the GoRide app won’t work properly or at all.

        You should be aware that there are certain things that Lamine will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but Lamine cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.

        If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.

        Along the same lines, Lamine cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, Lamine cannot accept responsibility.

        With respect to Lamine’s responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. Lamine accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.

        At some point, we may wish to update the app. The app is currently available on Android – the requirements for system (and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. Lamine does not promise that it will always update the app so that it is relevant to you and/or works with the Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.

        Changes to This Terms and Conditions

        I may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Terms and Conditions on this page. These changes are effective immediately after they are posted on this page.

        Contact Us

        If you have any questions or suggestions about my Terms and Conditions, do not hesitate to contact me at ridego@lamine.me +213676515089.</string>
    <string name="instant_book">Instant Book</string>
    <string name="vehicle_image">Vehicle Image</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="model">Model</string>
    <string name="type">Type</string>
    <string name="color">Color</string>
    <string name="year">Year</string>
    <string name="license_plate">License Plate</string>
    <string name="smoke_icon">smoke_icon</string>
    <string name="no_smoking">No Smoking</string>
    <string name="pet_icon">pet_icon</string>
    <string name="empty_seats">Empty Seats</string>
    <string name="we_reccomend_putting_maximum_2_people_in_the_back_to_ensure_everyone_s_comfort">We recommend putting
        maximum 2 people in the back to ensure everyone\'s comfort
    </string>
    <string name="select_a_number">Select a number</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="credit_card">credit_Card</string>
    <string name="passengers_are_instantly_booked">Passengers are instantly booked</string>
    <string name="sit_back_relax_and_watch_the_bookings_roll_in">Sit back, relax and watch the bookings roll in</string>
    <string name="policies">Policies</string>
    <string name="our_policies_ensure_that_both_the_drivers_and_passengers_are_happy_with_the_service">Our policies
        ensure that both the drivers and passengers are happy with the service.
    </string>
    <string name="passengers_pay_with_cash">Passengers pay with cash</string>
    <string name="all_passengers_must_pay_using_cash_to_protect_you_from_scammed">All passengers must pay using cash to
        protect you from scammed.
    </string>
    <string name="money_ic">money_ic</string>
    <string name="you_get_paid_after_the_trip">You get paid after the trip</string>
    <string name="you_ll_recieve_your_payout_after_the_trip_from_passengers_to_ensure_a_successful_trip">You\'ll receive
        your payout after the trip from passengers to ensure a successful trip.
    </string>
    <string name="flash_ic">flash_ic</string>
    <string name="ic_interested">ic_interested</string>
    <string name="you_re_committed_to_driving_when_you_post_a_trip_and_you_could_be_suspended_if_you_cancel">You\'re
        committed to driving when you post a trip and you could be suspended if you cancel.
    </string>
    <string name="pets">Pets</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_profile">Profile settings</string>
    <string name="avoid_canceling_your_trip">Avoid canceling your trip</string>
</resources>