<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
            android:fragment="me.lamine.goride.settingsActivity.SettingsActivity$GeneralPreferenceFragment"
            android:title="@string/pref_header_general"
            android:icon="@drawable/ic_info_black_24dp"/>

    <header
            android:fragment="me.lamine.goride.settingsActivity.SettingsActivity$NotificationPreferenceFragment"
            android:title="@string/pref_header_notifications"
            android:icon="@drawable/ic_notifications_active_orange_24dp"/>

    <header
            android:fragment="me.lamine.goride.settingsActivity.SettingsActivity$DataSyncPreferenceFragment"
            android:title="@string/pref_header_profile"
            android:icon="@drawable/ic_person_pin_circle_orange_24dp"/>

</preference-headers>
