<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal" xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:background="@drawable/custom_border_round"
            android:gravity="center"
            android:id="@+id/other_btn_smoke"
            android:layout_marginEnd="10dp">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_smoke_free_black_24dp"
                android:id="@+id/btn_no_smoke"
                android:layout_weight="1"
                android:contentDescription="@string/smoke_icon"/>
        <TextView
                android:text="@string/no_smoking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/no_smokeText"
                android:layout_weight="1"
                android:textColor="#282828"
                android:textSize="18sp"
                android:layout_marginStart="12dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:background="@drawable/custom_border_round"
            android:gravity="center"
            android:id="@+id/other_btn_pet">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_pets_black_24dp"
                android:id="@+id/btn_no_pets"
                android:layout_weight="1"
                android:contentDescription="@string/pet_icon"/>
        <TextView
                android:text="@string/pets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_pet"
                android:layout_weight="1"
                android:textColor="#282828"
                android:textSize="18sp"
                android:layout_marginStart="12dp"/>
    </LinearLayout>
</LinearLayout>