<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/book_instantly_card"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/custom_bg"
            android:background="@drawable/custom_border_round" android:paddingBottom="20dp"
    >
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:padding="20dp"
                android:background="@drawable/custom_border_round" android:id="@+id/instantbook_layout">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/flash_ic_img" app:srcCompat="@drawable/ic_flash_on_yellow_24dp"
                    android:contentDescription="@string/flash_ic"/>
            <TextView
                    android:text="@string/instant_book"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/cardetails_instantbook"
                    android:textSize="18sp"
                    android:textColor="@android:color/black" android:fontFamily="@font/roboto_black"
                    android:paddingBottom="20dp"/>
            <TextView
                    android:text="@string/passengers_are_instantly_booked"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/card_cotitle2" android:textSize="16sp"
                    android:textColor="@color/btnBlack" android:textStyle="bold" android:paddingBottom="10dp"/>
            <TextView
                    android:text="@string/sit_back_relax_and_watch_the_bookings_roll_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/card_desc2"
                    android:textColor="#4c4c4c" android:textSize="16sp"
                    android:paddingTop="5dp" android:textStyle="italic"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>